egonlang-core/res/examples/invalid/fn_expr_mismatch_return_type_expect_unit_actual_number.eg
(): () { 1 };

// out: TypeError: mismatched types: expected type `()` but received `number`